# SGCD

./: .flake8  .flaskenv  .gitatributes  .gitignore  .pylintrc  README.md  ZZZZZZZZ.py  config.py  package.json  pyproject.toml  requirements.txt  run.py  website_modelo.html
app/: app.py  cli.py  criar_admin.py  decorators.py  extensions.py
app/academia/: forms.py  models.py  routes.py  schemas.py  services.py
app/academia/templates/: cancelar_inscricao.html  confirmar_inscricao.html  criar_inscricao.html  registar_presenca.html
app/admin/: forms.py  routes.py  schemas.py  services.py
app/admin/templates/: dashboard.html  editar_utilizadores.html  futura base.html  listar_utilizadores.html  relatorios.html
app/autenticacao/: forms.py  routes.py  schemas.py  services.py
app/autenticacao/templates/: cadastrar.html  login.html  web_site.html
app/historico/: models.py  services.py
app/hotel/: forms.py  models.py  routes.py  schemas.py  services.py
app/hotel/templates/: index.html  reserva_hotel.html
app/pagamentos/: forms.py  models.py  routes.py  services.py
app/pagamentos/templates/: pagamento_form.html  pagamento_novo.html
app/publico/: forms.py  models.py  routes.py  schemas.py  services.py
app/publico/static/css/: main.css  main.css.map
app/publico/static/js/: main.js
app/publico/static/sass/: main.scss
app/publico/static/sass/components/: _alerts.scss  _buttons.scss  _cards.scss
app/publico/static/sass/layout/: _footer.scss  (+2 more)
app/publico/templates/: base.html  contactos.html  desporto.html  este_nao_login.html  eventos.html  home.html  hotel.html  index.html  modalidades.html  reservar_hotel.html  restaurante.html  sobre.html
app/publico/templates/partials/: _footer.html  _header.html
app/relatorios/: routes.py  schemas.py  services.py
app/relatorios/templates/: _header_logado.html  base_dashboard.html  dashboard_antigo.html  index.html
app/templates/: algum_template.html
app/utilizadores/: models.py  routes.py  services.py
app/utilizadores/templates/: pagamentos.html  painel_aluno.html
migrations/: env.py
migrations/versions/: 59c7cf02112c_iniciar_banco_de_dados.py  6ad603bb4b17_adicionar_a_tabela_mensagem.py
scripts/: check_mappers.py
(+12 files in other folders)
